# mpVolCtrl

./: CMakeLists.txt  LICENSE.txt  README.md
src/: auto_cleanup.hpp  autorun_task.cpp  autorun_task.hpp  config.hpp  errors.cpp  errors.hpp  main.cpp  mpVolCtrl.exe.manifest  mpVolCtrl64.exe.manifest  mpvc_config.hpp  resource.h  resource.rc  unicode.h  volume_control.cpp  volume_control.hpp
