cmake_minimum_required(VERSION 3.9)
project("Media Player Volume Control")


set(SOURCES "${PROJECT_SOURCE_DIR}/src/main.cpp")
list(APPEND SOURCES "${PROJECT_SOURCE_DIR}/src/resource.rc")
list(APPEND SOURCES "${PROJECT_SOURCE_DIR}/src/errors.cpp")
list(APPEND SOURCES "${PROJECT_SOURCE_DIR}/src/volume_control.cpp")
list(APPEND SOURCES "${PROJECT_SOURCE_DIR}/src/autorun_task.cpp")

set(HEADERS "")
list(APPEND HEADERS "${PROJECT_SOURCE_DIR}/src/resource.h")
list(APPEND HEADERS "${PROJECT_SOURCE_DIR}/src/unicode.h")
list(APPEND HEADERS "${PROJECT_SOURCE_DIR}/src/auto_cleanup.hpp")
list(APPEND HEADERS "${PROJECT_SOURCE_DIR}/src/errors.hpp")
list(APPEND HEADERS "${PROJECT_SOURCE_DIR}/src/volume_control.hpp")
list(APPEND HEADERS "${PROJECT_SOURCE_DIR}/src/config.hpp")
list(APPEND HEADERS "${PROJECT_SOURCE_DIR}/src/mpvc_config.hpp")
list(APPEND HEADERS "${PROJECT_SOURCE_DIR}/src/autorun_task.hpp")


if(MINGW)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -municode -fno-rtti -pipe")
set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -municode -pipe")
set(CMAKE_CXX_FLAGS_MINSIZEREL "${CMAKE_CXX_FLAGS_MINSIZEREL} -fdata-sections -ffunction-sections -flto -fomit-frame-pointer -fexpensive-optimizations -finline-functions -fno-exceptions -s")
set(CMAKE_EXE_LINKER_FLAGS_MINSIZEREL "${CMAKE_EXE_LINKER_FLAGS_MINSIZEREL} -Wl,-gc-sections -Wl,-s -shared-libstdc++ -shared-libgcc -flto -s")
if(CMAKE_SIZEOF_VOID_P EQUAL 8)
set(CMAKE_RC_FLAGS "${CMAKE_RC_FLAGS} -D_WIN64")
endif()

set(CMAKE_RC_FLAGS_DEBUG "${CMAKE_RC_FLAGS_DEBUG} -DDEBUG -D_DEBUG")
set(CMAKE_RC_FLAGS_RELEASE "${CMAKE_RC_FLAGS_RELEASE} -DNDEBUG")
set(CMAKE_RC_FLAGS_RELWITHDEBINFO "${CMAKE_RC_FLAGS_RELWITHDEBINFO} -DNDEBUG")
set(CMAKE_RC_FLAGS_MINSIZEREL "${CMAKE_RC_FLAGS_MINSIZEREL} -DNDEBUG")

set(release_cxx_switches "-O3 -fdata-sections -ffunction-sections -flto -fomit-frame-pointer -fexpensive-optimizations -finline-functions -fno-exceptions")
set(release_link_switches "-Wl,-gc-sections -static -static-libgcc -static-libstdc++ -flto")
set(CMAKE_EXE_LINKER_FLAGS_RELEASE "-Wl,-gc-sections -Wl,-s -s")
elseif(MSVC)
set(CMAKE_CXX_FLAGS_MINSIZEREL "${CMAKE_CXX_FLAGS_MINSIZEREL} /Oi /Oy /GL /GR- /EHsc /GS-")
set(CMAKE_EXE_LINKER_FLAGS_MINSIZEREL "${CMAKE_EXE_LINKER_FLAGS_MINSIZEREL} /LTCG /INCREMENTAL:NO")
if(CMAKE_SIZEOF_VOID_P EQUAL 8)
set(CMAKE_RC_FLAGS "${CMAKE_RC_FLAGS} /D_WIN64")
endif()

set(release_cxx_switches "/Ox /Oi /Ot /Oy /GL /GR- /EHsc /GS-")
set(release_link_switches "/LTCG /INCREMENTAL:NO")
endif()
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} ${release_cxx_switches}")
set(CMAKE_EXE_LINKER_FLAGS_RELEASE "${CMAKE_EXE_LINKER_FLAGS_RELEASE} ${release_link_switches}")
set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "${CMAKE_CXX_FLAGS_RELWITHDEBINFO} ${release_cxx_switches}")
set(CMAKE_EXE_LINKER_FLAGS_RELWITHDEBINFO "${CMAKE_EXE_LINKER_FLAGS_RELWITHDEBINFO} ${release_link_switches}")
set(CMAKE_CXX_STANDARD 17)


link_libraries(uuid)
link_libraries(ole32)
link_libraries(Psapi)
link_libraries(taskschd)
link_libraries(Secur32)
add_executable(mpVolCtrl WIN32 ${SOURCES} ${HEADERS})
set_target_properties(mpVolCtrl PROPERTIES COMPILE_DEFINITIONS "UNICODE;_UNICODE;NTDDI_VERSION=0x06010000;_WIN32_WINNT=0x0601;WINVER=0x0601")
if(CMAKE_SIZEOF_VOID_P EQUAL 8)
set_target_properties(mpVolCtrl PROPERTIES OUTPUT_NAME "mpVolCtrl64")
endif()

include(CheckIPOSupported)
check_ipo_supported(RESULT result)
if(result)
	set_target_properties(mpVolCtrl PROPERTIES INTERPROCEDURAL_OPTIMIZATION TRUE)
endif()

set_directory_properties(PROPERTIES VS_STARTUP_PROJECT mpVolCtrl)
